# ambisonix

./: CMakeLists.txt  README.md
include/: AmbComponent.h  AmbSource.h  AmbSpeaker.h  Ambisonix.h
include/ambisonix/: AmbComponent.h  AmbSource.h  AmbSpeaker.h
src/: AmbComponent.cpp  AmbComponent.h  AmbFormat.cpp  AmbFormat.h  AmbSource.cpp  AmbSource.h  AmbSpeaker.cpp  AmbSpeaker.h  Ambisonix.cpp
